# Gliamispo_PY

./: .gitignore  CLAUDE.md  LEAN_EXPORT_20260313_114737.txt  LEAN_EXPORT_20260321_115109.txt  README.md  bootstrap_db.py  build.py  gliamispo.spec  guida_migrazione_gliamispo_v2.md  pyproject.toml  seed_training_data.py  setup_models.py
.github/workflows/: build_mac.yml
gliamispo_icons/: preview_icons.html
scripts/: entitlements.plist  notarize_mac.sh
src/gliamispo/: __main__.py  _frozen.py
src/gliamispo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gliamispo/breakdown/: orchestrator.py
src/gliamispo/database/: backup.py  manager.py  migrations.py  schema.sql
src/gliamispo/export/: __init__.py  call_sheet_pdf.py  email_distributor.py  excel_export.py  industry_export.py  pdf_exporter.py  sides_generator.py
src/gliamispo/import_/: swift_db_importer.py
src/gliamispo/ml/: analytics.py  cold_start.py  feedback_loop.py  inference.py  metrics.py  scheduler.py
src/gliamispo/models/: eighths.py  project.py  scene.py  scene_element.py
src/gliamispo/nlp/: context_engine.py  ner_extractor.py  (+5 more)
tests/breakdown/: test_orchestrator.py
tests/database/: test_backup.py  test_migrations.py  test_schema.py
tests/integration/: test_full_pipeline.py
tests/ml/: test_inference.py
tests/models/: test_eighths.py
tests/nlp/: test_pattern_matcher.py  test_pipeline.py
tests/parsing/: test_fountain.py
tests/scheduling/: test_genetic.py
tests/services/: test_synopsis_generator.py
tests/ui/: test_main_window.py  test_views.py
(+30 files in other folders)
