[project]
name = "gliamispo"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5",
    "scikit-learn>=1.3",
    "pdfplumber>=0.9",
    "python-docx>=1.1",
    "fpdf2>=2.7",
    "platformdirs>=4.0",
    # ── Livello 2: spaCy NER (IT + EN) ──────────────────────────────────────
    # I modelli vengono scaricati separatamente (vedere setup_models.py).
    # L'app funziona anche senza i modelli (fallback a regex).
    "spacy>=3.7",
    "openpyxl>=3.1",
]

[project.scripts]
gliamispo = "gliamispo.__main__:main"

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16"]
nlp-extra = ["sumy>=0.11", "sentence-transformers>=3.0"]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
build = [
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.package-data]
"gliamispo.database" = ["*.sql"]
"gliamispo.resources" = ["*.pkl", "*.onnx"]

[tool.ruff]
target-version = "py311"
line-length = 88
